[gd_scene load_steps=14 format=3 uid="uid://ia3ytjghlg1l"]

[ext_resource type="Script" path="res://interface/settings.gd" id="1_1et75"]

[sub_resource type="LabelSettings" id="LabelSettings_32men"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_dm1i1"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_vt63c"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_j45xi"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_yysej"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_yld46"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_etirq"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_vyy8s"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_0qrh1"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_qf3jq"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_qa6ry"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_vr411"]
font_size = 10
font_color = Color(0.784314, 0.784314, 0, 1)

[node name="Settings" type="Window"]
process_mode = 3
title = "Settings"
initial_position = 4
size = Vector2i(800, 500)
transient = true
exclusive = true
min_size = Vector2i(300, 300)
keep_title_visible = true
script = ExtResource("1_1et75")

[node name="Contents" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="_" type="MarginContainer" parent="Contents"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="_" type="VBoxContainer" parent="Contents/_"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Contents/_/_"]
layout_mode = 2

[node name="Navigation" type="TabBar" parent="Contents/_/_/Header"]
layout_mode = 2
size_flags_horizontal = 3
tab_count = 4
select_with_rmb = true
tab_0/title = "Audio"
tab_1/title = "Display"
tab_2/title = "Input"
tab_3/title = "Language"

[node name="RestoreDefaults" type="Button" parent="Contents/_/_/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Restore defaults"

[node name="Options" type="Panel" parent="Contents/_/_"]
layout_mode = 2
size_flags_vertical = 3

[node name="Scroller" type="ScrollContainer" parent="Contents/_/_/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="_" type="MarginContainer" parent="Contents/_/_/Options/Scroller"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Audio" type="VBoxContainer" parent="Contents/_/_/Options/Scroller/_"]
layout_mode = 2

[node name="Output" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Audio"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Audio/Output"]
layout_mode = 2
size_flags_horizontal = 3
text = "Output Device"
label_settings = SubResource("LabelSettings_32men")

[node name="Device" type="OptionButton" parent="Contents/_/_/Options/Scroller/_/Audio/Output"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 14

[node name="_" type="HSeparator" parent="Contents/_/_/Options/Scroller/_/Audio"]
layout_mode = 2

[node name="Master" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Audio"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Audio/Master"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"
label_settings = SubResource("LabelSettings_dm1i1")

[node name="Volume" type="HSlider" parent="Contents/_/_/Options/Scroller/_/Audio/Master"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0

[node name="Display" type="VBoxContainer" parent="Contents/_/_/Options/Scroller/_"]
visible = false
layout_mode = 2

[node name="Renderer" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Display/Renderer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Renderer"
label_settings = SubResource("LabelSettings_vt63c")

[node name="Method" type="OptionButton" parent="Contents/_/_/Options/Scroller/_/Display/Renderer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
item_count = 2
selected = 0
popup/item_0/text = "OpenGL"
popup/item_0/id = 0
popup/item_1/text = "Vulkan"
popup/item_1/id = 1

[node name="_" type="HSeparator" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="Window" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Display/Window"]
layout_mode = 2
size_flags_horizontal = 3
text = "Window Mode"
label_settings = SubResource("LabelSettings_j45xi")

[node name="Mode" type="OptionButton" parent="Contents/_/_/Options/Scroller/_/Display/Window"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 14
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Exclusive Fullscreen"
popup/item_2/id = 2

[node name="VSync" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Display/VSync"]
layout_mode = 2
size_flags_horizontal = 3
text = "VSync"
label_settings = SubResource("LabelSettings_yysej")

[node name="Mode" type="OptionButton" parent="Contents/_/_/Options/Scroller/_/Display/VSync"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 14
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2

[node name="_2" type="HSeparator" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="Resolution" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Display/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution"
label_settings = SubResource("LabelSettings_yld46")

[node name="Value" type="OptionButton" parent="Contents/_/_/Options/Scroller/_/Display/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_font_sizes/font_size = 14
alignment = 1
item_count = 9
selected = 0
popup/item_0/text = "4:3"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "640x480"
popup/item_1/id = 1
popup/item_2/text = "800x600"
popup/item_2/id = 2
popup/item_3/text = "1024x768"
popup/item_3/id = 3
popup/item_4/text = "16:9"
popup/item_4/id = 4
popup/item_4/separator = true
popup/item_5/text = "960x540"
popup/item_5/id = 5
popup/item_6/text = "1280x720"
popup/item_6/id = 6
popup/item_7/text = "1366x768"
popup/item_7/id = 7
popup/item_8/text = "1920x1080"
popup/item_8/id = 8

[node name="Scale" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Display/Scale"]
layout_mode = 2
size_flags_horizontal = 3
text = "Scale"
label_settings = SubResource("LabelSettings_etirq")

[node name="Value" type="OptionButton" parent="Contents/_/_/Options/Scroller/_/Display/Scale"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_font_sizes/font_size = 14
alignment = 1
item_count = 6
selected = 2
popup/item_0/text = "50%"
popup/item_0/id = 0
popup/item_1/text = "75%"
popup/item_1/id = 1
popup/item_2/text = "100%"
popup/item_2/id = 2
popup/item_3/text = "125%"
popup/item_3/id = 3
popup/item_4/text = "150%"
popup/item_4/id = 4
popup/item_5/text = "200%"
popup/item_5/id = 5

[node name="_3" type="HSeparator" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="FOV" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Display/FOV"]
layout_mode = 2
size_flags_horizontal = 3
text = "Field-Of-View (FOV)"
label_settings = SubResource("LabelSettings_vyy8s")

[node name="Value" type="SpinBox" parent="Contents/_/_/Options/Scroller/_/Display/FOV"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 120.0
value = 75.0
alignment = 1
suffix = "Â°"

[node name="Shadow" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Display/Shadow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Shadows"

[node name="Value" type="OptionButton" parent="Contents/_/_/Options/Scroller/_/Display/Shadow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Off"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3

[node name="MSAA" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Display/MSAA"]
layout_mode = 2
size_flags_horizontal = 3
text = "MSAA"
label_settings = SubResource("LabelSettings_0qrh1")

[node name="Value" type="OptionButton" parent="Contents/_/_/Options/Scroller/_/Display/MSAA"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Off"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3

[node name="SSAA" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Display"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Display/SSAA"]
layout_mode = 2
size_flags_horizontal = 3
text = "SSAA"
label_settings = SubResource("LabelSettings_qf3jq")

[node name="Value" type="OptionButton" parent="Contents/_/_/Options/Scroller/_/Display/SSAA"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "Off"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1

[node name="Input" type="VBoxContainer" parent="Contents/_/_/Options/Scroller/_"]
visible = false
layout_mode = 2

[node name="Mouse" type="HBoxContainer" parent="Contents/_/_/Options/Scroller/_/Input"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/Options/Scroller/_/Input/Mouse"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mouse sensitivity"
label_settings = SubResource("LabelSettings_qa6ry")

[node name="Sensitivity" type="HSlider" parent="Contents/_/_/Options/Scroller/_/Input/Mouse"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 0.5
step = 0.01
value = 0.25

[node name="Language" type="VBoxContainer" parent="Contents/_/_/Options/Scroller/_"]
visible = false
layout_mode = 2

[node name="Message" type="Label" parent="Contents/_/_/Options/Scroller/_/Language"]
layout_mode = 2
text = "Not implemented yet!"
horizontal_alignment = 1

[node name="RestartWarning" type="HBoxContainer" parent="Contents/_/_"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/RestartWarning"]
layout_mode = 2
size_flags_horizontal = 3
text = "There are modified changes that require a restart to take effect."
label_settings = SubResource("LabelSettings_vr411")
vertical_alignment = 1

[node name="EditorWarning" type="HBoxContainer" parent="Contents/_/_"]
layout_mode = 2

[node name="_" type="Label" parent="Contents/_/_/EditorWarning"]
layout_mode = 2
size_flags_horizontal = 3
text = "The game is being ran from the editor, note that some options may not be persistent."
label_settings = SubResource("LabelSettings_vr411")
vertical_alignment = 1

[node name="DefaultsConfirmation" type="ConfirmationDialog" parent="."]
title = "Restore default settings"
initial_position = 4
size = Vector2i(483, 100)
transient = false
exclusive = false
always_on_top = true
ok_button_text = "Yes"
dialog_text = "Are you sure you want to revert the settings back to default?"
cancel_button_text = "No"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="window_input" from="." to="." method="_on_window_input"]
[connection signal="tab_changed" from="Contents/_/_/Header/Navigation" to="." method="_on_navigation_tab_changed"]
[connection signal="pressed" from="Contents/_/_/Header/RestoreDefaults" to="." method="_on_restore_defaults_pressed"]
[connection signal="item_selected" from="Contents/_/_/Options/Scroller/_/Audio/Output/Device" to="." method="_on_audio_output_device_item_selected"]
[connection signal="value_changed" from="Contents/_/_/Options/Scroller/_/Audio/Master/Volume" to="." method="_on_audio_master_volume_value_changed"]
[connection signal="item_selected" from="Contents/_/_/Options/Scroller/_/Display/Renderer/Method" to="." method="_on_display_renderer_method_item_selected"]
[connection signal="item_selected" from="Contents/_/_/Options/Scroller/_/Display/Window/Mode" to="." method="_on_display_window_mode_item_selected"]
[connection signal="item_selected" from="Contents/_/_/Options/Scroller/_/Display/VSync/Mode" to="." method="_on_display_vsync_mode_item_selected"]
[connection signal="item_selected" from="Contents/_/_/Options/Scroller/_/Display/Resolution/Value" to="." method="_on_display_resolution_value_item_selected"]
[connection signal="item_selected" from="Contents/_/_/Options/Scroller/_/Display/Scale/Value" to="." method="_on_display_scale_value_item_selected"]
[connection signal="value_changed" from="Contents/_/_/Options/Scroller/_/Display/FOV/Value" to="." method="_on_display_fov_value_changed"]
[connection signal="item_selected" from="Contents/_/_/Options/Scroller/_/Display/Shadow/Value" to="." method="_on_display_shadow_value_item_selected"]
[connection signal="item_selected" from="Contents/_/_/Options/Scroller/_/Display/MSAA/Value" to="." method="_on_display_msaa_value_item_selected"]
[connection signal="item_selected" from="Contents/_/_/Options/Scroller/_/Display/SSAA/Value" to="." method="_on_display_ssaa_value_item_selected"]
[connection signal="value_changed" from="Contents/_/_/Options/Scroller/_/Input/Mouse/Sensitivity" to="." method="_on_input_mouse_sensitivity_value_changed"]
[connection signal="confirmed" from="DefaultsConfirmation" to="." method="_on_restore_defaults_confirmed"]
